--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-spring.datasource.url = jdbc:mysql://localhost:3306/accounts?allowPublicKeyRetrieval=true &useSSL=false verifyServerCertificate=false&useSSL=false&requireSSL=false&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/payAccounts?allowPublicKeyRetrieval=true &useSSL=false verifyServerCertificate=false&useSSL=false&requireSSL=false&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
 spring.datasource.username = root
 
 spring.datasource.password = hiskel1288
