--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8082
 
-spring.datasource.url = jdbc:mysql://localhost:3306/payAccounts?allowPublicKeyRetrieval=true &useSSL=false verifyServerCertificate=false&useSSL=false&requireSSL=false&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
-spring.datasource.username = root
-
-spring.datasource.password = hiskel1288
-
+spring.datasource.url = jdbc:mysql://localhost:3306/pay_accounts?allowPublicKeyRetrieval=true &useSSL=false verifyServerCertificate=false&useSSL=false&requireSSL=false&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=hiskel1288
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
@@ -16,4 +16,4 @@ spring.jpa.database=mysql
 spring.jpa.generate-ddl=true
 
 spring.main.allow-bean-definition-overriding=true
-logging.level.org.hibernate.SQL=DEBUG
+
